[package]
name = "dreamchecker"
version = "1.10.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2024"

[dependencies]
dm = { path = "../dreammaker", package = "dreammaker" }
serde_json = "1.0"
foldhash = "0.1.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
ron = "0.10.1"

[build-dependencies]
chrono = "0.4.38"
git2 = { version = "0.20.2", default-features = false }
